[tool.poetry]
name = "workouts"
version = "0.1.0"
description = ""
authors = ["Earl <earlhikky91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pony = "^0.7.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
